# feed

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  tfidf_prototype.py
.claude/commands/: dreamer.md
src/feed/: classifier.py  github.py  governor.py  main.py  models.py  storage.py  writer.py
src/feed/governor/: __init__.py  normalize.py  scoring.py  shell_ast.py  signals.py
static/: index.html
tests/: test_classifier.py  test_github.py  test_governor.py  test_integration.py  test_main.py  test_models.py  test_storage.py  test_writer.py
tests/governor/: test_normalize.py  test_scoring.py  test_shell_ast.py  test_signals.py
